[package]
name = "git"
version = "0.1.0"
edition = "2021"

[lib]
name="pkg"
path="./src/lib.rs"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = "1.11.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
